--- a/_posts/2021-11-23-a-gentle-intro-to-package-management-in-r/a-gentle-intro-to-package-management-in-r.html
+++ b/_posts/2021-11-23-a-gentle-intro-to-package-management-in-r/a-gentle-intro-to-package-management-in-r.html
@@ -112,7 +112,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <!--radix_placeholder_rmarkdown_metadata-->
 
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output"]}},"value":[{"type":"character","attributes":{},"value":["A Gentle Intro to Package Management in R"]},{"type":"character","attributes":{},"value":["R packages are what truly make R great! This primer will make sure you know exactly where you are installing packages from (what repositories), and where you are installing them to on your computer/server (what libraries).\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name"]}},"value":[{"type":"character","attributes":{},"value":["Ryan Johnson"]}]}]},{"type":"character","attributes":{},"value":["2021-11-23"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[false]}]}]}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","preview","output"]}},"value":[{"type":"character","attributes":{},"value":["A Gentle Intro to Package Management in R"]},{"type":"character","attributes":{},"value":["R packages are what truly make R great! This primer will make sure you know exactly where you are installing packages from (what repositories), and where you are installing them to on your computer/server (what libraries).\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name"]}},"value":[{"type":"character","attributes":{},"value":["Ryan Johnson"]}]}]},{"type":"character","attributes":{},"value":["2021-11-23"]},{"type":"character","attributes":{},"value":["/images/libraries.jpg"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained","toc","toc_depth"]}},"value":[{"type":"logical","attributes":{},"value":[false]},{"type":"logical","attributes":{},"value":[true]},{"type":"integer","attributes":{},"value":[4]}]}]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   
@@ -1483,6 +1483,20 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 </div>
 
 <div class="d-article">
+<div class="d-contents d-contents-float">
+<nav class="l-text toc figcaption" id="TOC">
+<h3>Contents</h3>
+<ul>
+<li><a href="#installing-your-first-r-package">Installing your first R package</a></li>
+<li><a href="#understanding-your-package-environment">Understanding your Package Environment</a>
+<ul>
+<li><a href="#repositories">Repositories</a></li>
+<li><a href="#libraries">Libraries</a></li>
+<li><a href="#recap">Recap</a></li>
+</ul></li>
+</ul>
+</nav>
+</div>
 <h1 id="installing-your-first-r-package">Installing your first R package</h1>
 <p>For this example, we’ll focus on <code>ggplot2</code>, which is a popular R package for data visualization. Let’s first try to load the package.</p>
 <div class="layout-chunk" data-layout="l-body">
